Change formatter configurations to match Yugabyte's standards (#48)
* changed formatting rules according to Yugabyte standard